fix subtext wrapping on radio and checkbox

--- a/src/assets/styles/mixins/shared-checkbox-styles.scss
+++ b/src/assets/styles/mixins/shared-checkbox-styles.scss
@@ -10,10 +10,10 @@
     &__label {
       margin-bottom: 0;
       cursor: pointer;
+      display: flex;
     }
     
     &__content {
-      display: inline-block;
       font-weight: normal;
       vertical-align: top;
     }
